<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sec_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/welcome_back"
                android:textStyle="bold"
                android:textColor="@color/login_title_text"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_into_continue"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="#B7FF9800"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/editText_email_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:focusable="true"
                    android:hint="@string/email"
                    android:textStyle="bold"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />
            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#B7FF9800"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/ic_password"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/editText_password_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/login_password"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />
            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#63FB9600"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_remember"
                    android:textColor="@color/login_edit_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_login_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/login"
                    android:textColor="@color/login_btn_text"
                    android:textSize="14sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView_forget_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/forgot_password"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/sec_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_account"
                android:textColor="@color/login_create_acc_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_signup_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_signup"
                android:textColor="#FF0000"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#FF0000" />
    </LinearLayout>
</RelativeLayout>
