<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sec_reg_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_signup"
                android:textStyle="bold"
                android:textColor="@color/login_title_text"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="#B7FF9800"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_user"
                    app:tint="@color/login_image_bg" />

                <EditText
                    android:id="@+id/editText_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/sign_up_name"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />
            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#B7FF9800"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_email"
                    app:tint="@color/login_image_bg" />

                <EditText
                    android:id="@+id/editText_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/login_email"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />
            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#B7FF9800"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/login_image_bg" />

                <EditText
                    android:id="@+id/editText_phoneNo_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/sign_up_phone"
                    android:textStyle="bold"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />
            </LinearLayout>


            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#B7FF9800"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_password"
                    app:tint="@color/login_image_bg" />

                <EditText
                    android:id="@+id/editText_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/login_password"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />
            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/login_register"
                android:textColor="@color/login_btn_text"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/sec_reg_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/already_account_sign_in"
                android:textColor="@color/login_create_acc_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="#FF0015"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/login_line" />
    </LinearLayout>
</RelativeLayout>
